Added patch for brand, category, product, invoice, user
Added predictable invoices data
